--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Your Life</title>
+    <meta name="viewport" content="width=device-width">
+    <title>Lifespan</title>
   </head>
   <body>
     <div id="mount"></div>
